feat: add environment-level shared env variables
